fixed spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -118,7 +118,7 @@ footer {
 .welcomeCon {
     height: 400px;
     width: 60%;
-    margin-top: 70px;
+    margin-top: 50px;
 }
 
 // show edit create
@@ -144,8 +144,8 @@ input, textarea {
 .author {
     font-style: italic;
 }
-.action_show {
-    margin-top: 5px;
+.actions_general {
+    margin: 15px 0px 30px 0px;
 }
 form {
     align-items: center;
